--- a/style.css
+++ b/style.css
@@ -56,6 +56,23 @@ main {
 
 form {
     margin-right: 10rem;
+    display: flex;
+    flex: 1;
+}
+
+form label {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+form label input[type="submit"] {
+    background-color: #F5D547;
+    box-shadow: var(--box-shadow);
+    color: #ECF0F1;
+    padding: 1rem;
+    border-radius: .4rem;
+    cursor: pointer;
 }
 
 .dropArea {
@@ -126,7 +143,7 @@ figcaption {
     max-width: 600px;
     height: 30rem; 
     padding: 2rem; 
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
